--- a/src/htdocs/css/_selectBar.scss
+++ b/src/htdocs/css/_selectBar.scss
@@ -19,7 +19,7 @@
     margin-bottom: .25rem;
 
     span {
-      color: $text-color-lighter;
+      color: var(--text-color-lighter);
       font-size: 1rem;
       margin-left: .3rem;
 
