--- a/src/htdocs/css/features/util/_maps.scss
+++ b/src/htdocs/css/features/util/_maps.scss
@@ -46,7 +46,7 @@
 
   .props {
     span {
-      color: $text-color-lighter;
+      color: var(--text-color-lighter);
       padding-left: .25rem;
     }
   }
