--- a/src/htdocs/css/_legendBar.scss
+++ b/src/htdocs/css/_legendBar.scss
@@ -4,7 +4,7 @@
   font-family: $font-family-headers;
 
   h2 + ul > li {
-    border-top: 1px solid $border-color-lighter;
+    border-top: 1px solid var(--border-color-lighter);
     padding: 0.5rem 0;
 
     &:first-child {
@@ -37,7 +37,7 @@
   }
   .aftershocks {
     ul {
-      color: $text-color;
+      color: var(--text-color);
       font-family: $font-family;
       font-weight: 300;
       letter-spacing: 0.015rem;
@@ -63,7 +63,7 @@
 
   .mags {
     align-items: center;
-    color: $text-color-lighter;
+    color: var(--text-color-lighter);
     display: flex;
     font-size: .9rem;
     justify-content: space-around;
