--- a/src/htdocs/css/features/_pager-exposures.scss
+++ b/src/htdocs/css/features/_pager-exposures.scss
@@ -5,7 +5,7 @@ table.exposures {
 
   tbody tr {
     border-bottom: none; // override general table border styles
-    border-top: 1px solid $border-color-lighter;
+    border-top: 1px solid var(--border-color-lighter);
 
     &.city,
     &:first-child {
@@ -31,7 +31,7 @@ table.exposures {
   }
 
   .city td {
-    color: $text-color-lighter;
+    color: var(--text-color-lighter);
     font-weight: 400;
     line-height: 1.4;
     padding-bottom: .375rem;
