--- a/src/htdocs/css/features/_shakemapStations.scss
+++ b/src/htdocs/css/features/_shakemapStations.scss
@@ -104,7 +104,7 @@
         padding: .25rem 0;
 
         abbr {
-          color: $text-color-lightest;
+          color: var(--text-color-lightest);
           font-size: .75rem;
           margin-top: .15rem;
         }
