--- a/src/htdocs/css/features/_significantEqs.scss
+++ b/src/htdocs/css/features/_significantEqs.scss
@@ -1,8 +1,8 @@
 @use '../util/variables' as *;
 
 #significant-eqs {
-  border-bottom: 1px solid $border-color-lighter;
-  border-top: 1px solid $border-color;
+  border-bottom: 1px solid var(--border-color-lighter);
+  border-top: 1px solid var(--border-color);
   min-height: 4rem;
   position: relative;
 
@@ -23,20 +23,20 @@
 
     li {
       align-items: center;
-      border-bottom: 1px solid $border-color-lighter;
+      border-bottom: 1px solid var(--border-color-lighter);
       display: flex;
       margin: 0;
       padding: .5rem .25rem;
       transition: all $effect-off-duration ease-in;
 
       &:hover {
-        background: $accent-color-lightest;
-        color: $text-color-darker;
+        background: var(--accent-color-lightest);
+        color: var(--text-color-darker);
         cursor: pointer;
         transition: all $effect-on-duration ease-out;
 
         time {
-          color: $text-color;
+          color: var(--text-color);
           transition: color $effect-on-duration ease-out;
         }
       }
@@ -47,7 +47,7 @@
 
       &:active,
       &.selected {
-        background: $accent-color;
+        background: var(--accent-color);
         color: #fff;
         transition: all $effect-on-duration ease-out;
 
@@ -80,7 +80,7 @@
     }
 
     time {
-      color: $text-color-lighter;
+      color: var(--text-color-lighter);
       margin: 0;
       transition: color $effect-off-duration ease-in;
     }
