--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -31,22 +31,22 @@
 }
 
 a {
-  color: $link-color;
-  text-decoration-color: color.scale($link-color, $lightness: 75%);
+  color: var(--accent-color);
+  text-decoration-color: color.scale($accent-color, $lightness: 75%);
   text-decoration-skip-ink: none;
   text-decoration-thickness: 2px;
   text-underline-offset: 2px;
   transition: text-decoration-color $effect-off-duration ease-in;
 
   &:active {
-    color: $link-color-active;
+    color: var(--accent-color);
   }
   &:hover {
-    text-decoration-color: color.scale($link-color, $lightness: 25%);
+    text-decoration-color: color.scale($accent-color, $lightness: 25%);
     transition: text-decoration-color $effect-on-duration ease-out;
   }
   &:visited {
-    color: $link-color-visited;
+    color: var(--accent-color);
   }
 }
 
@@ -68,8 +68,8 @@ main {
   padding: 0;
 }
 body {
-  background: $bg-color-darker;
-  color: $text-color;
+  background: var(--bg-color-darker);
+  color: var(--text-color);
   position: relative;
 }
 
@@ -155,11 +155,11 @@ th {
 }
 
 thead tr {
-  border-color: $border-color;
+  border-color: var(--border-color);
 }
 
 tr {
-  border-bottom: 1px solid $border-color-lighter;
+  border-bottom: 1px solid var(--border-color-lighter);
 }
 
 ul {
@@ -167,7 +167,7 @@ ul {
 }
 
 .bubble {
-  background: $bg-color;
+  background: var(--bg-color);
   border-radius: $content-border-radius;
   box-shadow: 0 3px 14px 0 rgba(102 ,102, 102, 0.1);
   padding: 1rem;
@@ -220,7 +220,7 @@ ul {
   }
 
   i {
-    color: color.scale($link-color, $lightness: 25%);
+    color: color.scale($accent-color, $lightness: 25%);
     font-size: $font-size-smaller;
     opacity: 0;
     position: absolute;
@@ -253,7 +253,7 @@ ul {
   &.alt {
     dd,
     dt {
-      border-bottom: 1px solid $border-color-lightest;
+      border-bottom: 1px solid var(--border-color-lightest);
       padding-bottom: .25rem;
       padding-top: .25rem;
 
@@ -281,7 +281,7 @@ ul {
     line-height: 1.75;
   }
   dd {
-    color: $text-color;
+    color: var(--text-color);
     grid-column-start: 2;
     margin: 0;
     padding-left: .5rem;
