--- a/src/htdocs/css/leaflet/_region.scss
+++ b/src/htdocs/css/leaflet/_region.scss
@@ -9,12 +9,12 @@
     &:active,
     &.selected {
       .box {
-        border-color: $bg-color;
+        border-color: var(--bg-color);
       }
 
       .icon-close {
-        background: $bg-color;
-        color: $accent-color;
+        background: var(--bg-color);
+        color: var(--accent-color);
       }
     }
     &:hover {
@@ -24,7 +24,7 @@
 
   .box {
     align-items: center;
-    border: 2px solid $accent-color;
+    border: 2px solid var(--accent-color);
     display: flex;
     height: 15px;
     justify-content: center;
@@ -33,9 +33,9 @@
   }
 
   .icon-close {
-    background: $accent-color;
+    background: var(--accent-color);
     border-radius: 50%;
-    color: $bg-color;
+    color: var(--bg-color);
     font: normal 10px Tahoma, Verdana, sans-serif;
     height: 12px;
     line-height: 1.1;
@@ -49,11 +49,11 @@
   // Disabled controls
   .leaflet-disabled .box,
   .leaflet-disabled:active .box {
-    border-color: $accent-color-disabled;
+    border-color: var(--accent-color-disabled);
   }
   .leaflet-disabled .icon-close,
   .leaflet-disabled:active .icon-close {
-    background: $accent-color-disabled;
-    color: $bg-color;
+    background: var(--accent-color-disabled);
+    color: var(--bg-color);
   }
 }
