--- a/src/htdocs/css/util/_lightbox.scss
+++ b/src/htdocs/css/util/_lightbox.scss
@@ -42,7 +42,7 @@
 
   h3 {
     align-items: center;
-    background: linear-gradient($bg-color, $bg-color-alpha);
+    background: linear-gradient(var(--bg-color), var(--bg-color-alpha));
     font-size: 1.625rem;
     gap: 0 .5rem;
     margin: 0;
@@ -52,7 +52,7 @@
     z-index: 10001;
 
     .button {
-      border: 1px solid $accent-color;
+      border: 1px solid var(--accent-color);
       display: flex;
       font-weight: bold;
       justify-content: center;
@@ -60,9 +60,9 @@
       width: 3rem;
 
       &:active {
-        background: $accent-color;
-        color: $bg-color;
-        text-shadow: $button-text-shadow;
+        background: var(--accent-color);
+        color: var(--bg-color);
+        text-shadow: var(--button-text-shadow);
       }
     }
   }
@@ -79,7 +79,7 @@
   }
 
   .container {
-    background: $bg-color;
+    background: var(--bg-color);
     border-radius: $content-border-radius;
     max-height: 100%;
     max-width: 100%;
