--- a/src/htdocs/css/util/_plotly.scss
+++ b/src/htdocs/css/util/_plotly.scss
@@ -13,7 +13,7 @@
     }
 
     text {
-      fill: $text-color !important;
+      fill: var(--text-color) !important;
       font: $font-size $font-family !important;
     }
   }
@@ -26,19 +26,19 @@
 
     &:hover path,
     &.active path {
-      fill: $accent-color !important;
+      fill: var(--accent-color) !important;
       transition: fill $effect-on-duration ease-out;
     }
   }
 
   .plotly [data-title] {
     &:after {
-      background: $accent-color-lightest;
-      color: $accent-color;
+      background: var(--accent-color-lightest);
+      color: var(--accent-color);
       font: $font-size $font-family;
     }
     &:before {
-      border-color: transparent transparent $accent-color-lightest;
+      border-color: transparent transparent var(--accent-color-lightest);
     }
   }
 
