--- a/src/htdocs/css/util/controls/_inputs.scss
+++ b/src/htdocs/css/util/controls/_inputs.scss
@@ -12,7 +12,7 @@ input[type="radio"] {
 
   + span:before {
     align-items: center;
-    background: $bg-color;
+    background: var(--bg-color);
     border: 1px solid #888;
     content: '\00a0';
     display: flex;
@@ -21,7 +21,7 @@ input[type="radio"] {
     justify-content: center;
     margin-right: .5rem;
     position: relative;
-    text-shadow: $button-text-shadow;
+    text-shadow: var(--button-text-shadow);
     top: 0px;
     width: 1rem;
   }
@@ -36,8 +36,8 @@ input[type="radio"] + span:before {
 
 input[type="checkbox"]:checked + span:before,
 input[type="radio"]:checked + span:before {
-  background: $accent-color;
-  border-color: $accent-color;
+  background: var(--accent-color);
+  border-color: var(--accent-color);
   color: #fff;
 }
 input[type="checkbox"]:checked + span:before {
@@ -52,7 +52,7 @@ input[type="radio"]:checked + span:before {
 
 input[type="text"],
 input[type="number"] {
-  border: 1px solid $border-color-lighter;
+  border: 1px solid var(--border-color-lighter);
   border-radius: $button-border-radius;
   box-shadow: inset 0 1px 4px 0 hsla(0, 0%, 0%, .08);
   font-size: .9rem;
@@ -68,22 +68,22 @@ input[type="number"] {
 
   &:focus,
   &.active { // .active is for Flatpickr inputs
-    border: 1px solid $accent-color;
-    box-shadow: 0 0 3px $accent-color;
+    border: 1px solid var(--accent-color);
+    box-shadow: 0 0 3px var(--accent-color);
   }
 }
 
 // Invalid Flatpickr inputs
 .invalid > input[type="text"] {
-  border: 1px solid $invalid-color;
-  box-shadow: 0 0 3px $invalid-color;
+  border: 1px solid var(--invalid-color);
+  box-shadow: 0 0 3px var(--invalid-color);
 }
 
 // Flag invalid inputs when a Mainshock is selected
 .mainshock {
   input[type="text"]:invalid,
   input[type="number"]:invalid {
-    border: 1px solid $invalid-color;
-    box-shadow: 0 0 3px $invalid-color;
+    border: 1px solid var(--invalid-color);
+    box-shadow: 0 0 3px var(--invalid-color);
   }
 }
