--- a/src/htdocs/css/util/controls/_switch.scss
+++ b/src/htdocs/css/util/controls/_switch.scss
@@ -6,21 +6,21 @@
     display: none;
 
     &:active + label {
-      color: $text-color-darker;
+      color: var(--text-color-darker);
     }
     &:checked + label {
-      background: $accent-color;
-      border-color: $accent-color;
+      background: var(--accent-color);
+      border-color: var(--accent-color);
       padding-left: 1rem;
       width: 1.25rem;
     }
 
     + label {
-      background: $control-color;
-      border: 2px solid $control-color;
+      background: var(--control-color);
+      border: 2px solid var(--control-color);
       border-radius: 2rem;
       box-sizing: content-box;
-      color: $text-color;
+      color: var(--text-color);
       cursor: pointer;
       font-size: 1.125rem;
       margin: 0;
@@ -30,7 +30,7 @@
       width: 2.25rem;
 
       &:before {
-        background: $bg-color;
+        background: var(--bg-color);
         border-radius: 50%;
         content: '';
         display: block;
