--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -120,34 +120,8 @@ $separator-color: color.scale($accent-color, $lightness: 80%);
     margin: 5px -10px;
   }
 
-  // Use $accent-color SVG image for Leaflet layers toggle control
   .leaflet-control-layers-toggle {
-    background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" ' +
-      'height="26" width="26" viewBox="0 0 26 26">' +
-        '<style type="text/css">' +
-          '.border {' +
-            'fill: #{$accent-color};' +
-          '}' +
-          '.layer1 {' +
-            'fill: ' + color.scale($accent-color, $alpha: -15%, $lightness: 52%) + ';' +
-          '}' +
-          '.layer2 {' +
-            'fill: ' + color.scale($accent-color, $alpha: -18%, $lightness: 80%) + ';' +
-          '}' +
-          '.layer3 {' +
-            'fill: ' + color.scale($accent-color, $alpha: -45%, $lightness: 91%) + ';' +
-            'stroke: #{$accent-color};' +
-            'stroke-width: 0.2;' +
-          '}' +
-        '</style>' +
-        '<path class="layer1" d="M0,16.7l13-8l13,8l-13,8L0,16.7"/>' +
-        '<path class="border" d="M0,16.7L0,18l13,8l13-8l0-1.3l-13,8L0,16.7z"/>' +
-        '<path class="layer2" d="M0,12.7l13-8l13,8l-13,8L0,12.7"/>' +
-        '<path class="border" d="M0,12.7V14l13,8l13-8v-1.3l-13,8L0,12.7z"/>' +
-        '<path class="layer3" d="M0,8.8l13-8l13,8l-13,8L0,8.8"/>' +
-        '<path class="border" d="M0,8.8V10l13,8l13-8V8.8l-13,8L0,8.8z"/>' +
-      '</svg>'
-    );
+    @include layers($accent-color);
   }
 
   .leaflet-popup-close-button {
