--- a/src/htdocs/css/util/_mixins.scss
+++ b/src/htdocs/css/util/_mixins.scss
@@ -1,3 +1,6 @@
+@use 'sass:color';
+
+@use 'functions' as *;
 @use 'variables' as *;
 
 @mixin close() {
@@ -30,6 +33,35 @@
   font-family: $font-family-headers;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+@mixin layers($color) {
+  background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" ' +
+    'height="26" width="26" viewBox="0 0 26 26">' +
+      '<style type="text/css">' +
+        '.border {' +
+          'fill: #{$color};' +
+        '}' +
+        '.layer1 {' +
+          'fill: ' + color.scale($color, $alpha: -15%, $lightness: 52%) + ';' +
+        '}' +
+        '.layer2 {' +
+          'fill: ' + color.scale($color, $alpha: -18%, $lightness: 80%) + ';' +
+        '}' +
+        '.layer3 {' +
+          'fill: ' + color.scale($color, $alpha: -45%, $lightness: 91%) + ';' +
+          'stroke: #{$color};' +
+          'stroke-width: 0.2;' +
+        '}' +
+      '</style>' +
+      '<path class="layer1" d="M0,16.7l13-8l13,8l-13,8L0,16.7"/>' +
+      '<path class="border" d="M0,16.7L0,18l13,8l13-8l0-1.3l-13,8L0,16.7z"/>' +
+      '<path class="layer2" d="M0,12.7l13-8l13,8l-13,8L0,12.7"/>' +
+      '<path class="border" d="M0,12.7V14l13,8l13-8v-1.3l-13,8L0,12.7z"/>' +
+      '<path class="layer3" d="M0,8.8l13-8l13,8l-13,8L0,8.8"/>' +
+      '<path class="border" d="M0,8.8V10l13,8l13-8V8.8l-13,8L0,8.8z"/>' +
+    '</svg>'
+  );
 }
 
 @mixin opacify() {
