remove $text-color-lightest SASS var

--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -75,7 +75,7 @@
           transition: all $effect-on-duration ease-out;
 
           abbr {
-            border-color: color.scale($text-color-lightest, $lightness: -5%);
+            border-color: var(--text-color-lightest);
             color: var(--text-color-darker);
             transition: all $effect-on-duration ease-out;
           }
