--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -119,7 +119,7 @@
       }
 
       sup {
-        color: color.adjust($text-color-lightest, $alpha: -0.25);
+        color: #bbb;
         font-size: .75rem;
         position: absolute;
         right: -.75rem;
