--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -112,6 +112,10 @@ h4 {
   font-size: 1.25rem;
   margin: 0 0 .5rem;
 }
+h5 {
+  font-size: 1rem;
+  margin: 1rem 0 .5rem
+}
 
 html {
   box-sizing: border-box;
