set non-variable font color

--- a/src/htdocs/css/util/_impactBubbles.scss
+++ b/src/htdocs/css/util/_impactBubbles.scss
@@ -12,7 +12,7 @@ a.impact-bubble:hover {
   align-items: center;
   background: #fff;
   border-radius: $button-border-radius;
-  color: var(--text-color-darker) !important;
+  color: #000 !important;
   display: flex;
   flex-direction: column;
   letter-spacing: .03rem;
