--- a/src/htdocs/css/util/_variables.scss
+++ b/src/htdocs/css/util/_variables.scss
@@ -50,9 +50,6 @@ $accent-color-disabled: color.scale($accent-color, $lightness: 75%);
 $accent-color-lighter: color.scale($accent-color, $alpha: -4%, $lightness: 91%);
 $accent-color-lightest: color.scale($accent-color, $alpha: -4%, $lightness: 96%, $saturation: 25%);
 
-$bg-color: #fff;
-$bg-color-alpha: color.scale($bg-color, $alpha: -4%);
-
 $button-text-shadow: 1px 1px 2px color.scale($accent-color, $blackness: 50%);
 
 $invalid-color: #c00;
@@ -67,8 +64,8 @@ $reset-button-color: #efefef;
   --accent-color-lighter: #{$accent-color-lighter};
   --accent-color-lightest: #{$accent-color-lightest};
 
-  --bg-color: #{$bg-color};
-  --bg-color-alpha: #{$bg-color-alpha};
+  --bg-color: #fff;
+  --bg-color-alpha: rgba(255, 255, 255, .96);
   --bg-color-darker: #f7f7f7;
 
   --border-color: #ddd;
