--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -90,7 +90,7 @@
         &:active {
           h5 {
             background: var(--accent-color);
-            color: #fff;
+            color: var(--bg-color);
           }
         }
       }
