--- a/src/htdocs/css/_settingsBar.scss
+++ b/src/htdocs/css/_settingsBar.scss
@@ -48,7 +48,7 @@
     }
 
     time {
-      color: #333;
+      color: var(--text-color);
       display: block;
       line-height: 1;
       margin-top: .25rem;
