--- a/src/htdocs/css/util/controls/_buttons.scss
+++ b/src/htdocs/css/util/controls/_buttons.scss
@@ -51,7 +51,7 @@ button {
   &:active {
     background: var(--accent-color);
     box-shadow: inset 0 3px 8px rgba(0, 0, 0, .35);
-    color: #fff;
+    color: var(--bg-color);
     outline: 0;
     text-shadow: var(--button-text-shadow);
   }
